add new Hub for data per round

--- a/CleanArchitecture.API/appsettings.json
+++ b/CleanArchitecture.API/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-    //"DefaultConnection": "Server=47.239.123.32,1433;Database=CCDb;User Id=dbuser;Password=123;Trusted_Connection=False;TrustServerCertificate=True"
-    "DefaultConnection": "Data Source=DESKTOP-QHS7JGK;Initial Catalog=CCDb;Integrated Security=True;Persist Security Info=False;Pooling=False;Multiple Active Result Sets=False;Encrypt=False;Trust Server Certificate=False;Command Timeout=0"
+    "DefaultConnection": "Server=47.239.123.32,1433;Database=CCDb;User Id=dbuser;Password=123;Trusted_Connection=False;TrustServerCertificate=True"
+    //"DefaultConnection": "Data Source=DESKTOP-QHS7JGK;Initial Catalog=CCDb;Integrated Security=True;Persist Security Info=False;Pooling=False;Multiple Active Result Sets=False;Encrypt=False;Trust Server Certificate=False;Command Timeout=0"
   }
 }
