--- a/CleanArchitecture.API/appsettings.json
+++ b/CleanArchitecture.API/appsettings.json
@@ -1,14 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "Jwt": {
+        "Key": "your-super-secret-keyf;addkka;jldjfieakdjiwefslakdfjie",
+        "Issuer": "your-app",
+        "Audience": "your-app",
+        "ExpireDays": 7
+    },
+    "AllowedHosts": "*",
     "ConnectionStrings": {
         //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-        "DefaultConnection": "Server=47.239.123.32,1433;Database=CCDb;User Id=dbuser;Password=123;Trusted_Connection=False;TrustServerCertificate=True"
-        //"DefaultConnection": "Data Source=AK\\SQLEXPRESS;Initial Catalog=CCDb;Integrated Security=True;Persist Security Info=False;Pooling=False;Multiple Active Result Sets=False;Encrypt=False;Trust Server Certificate=False;Command Timeout=0"
+        //"DefaultConnection": "Server=47.239.123.32,1433;Database=CCDb;User Id=dbuser;Password=123;Trusted_Connection=False;TrustServerCertificate=True"
+        "DefaultConnection": "Data Source=AK\\SQLEXPRESS;Initial Catalog=CCDb;Integrated Security=True;Persist Security Info=False;Pooling=False;Multiple Active Result Sets=False;Encrypt=False;Trust Server Certificate=False;Command Timeout=0"
     }
 }
