--- a/CleanArchitecture.API/ComplexCalculator.API.csproj
+++ b/CleanArchitecture.API/ComplexCalculator.API.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
    
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
+   
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
