--- a/CleanArchitecture.API/appsettings.Development.json
+++ b/CleanArchitecture.API/appsettings.Development.json
@@ -1,8 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "Jwt": {
+        "Key": "your-super-secret-keyf;addkka;jldjfieakdjiwefslakdfjie",
+        "Issuer": "your-app",
+        "Audience": "your-app",
+        "ExpireDays": 1
     }
-  }
 }
